# ClaimsSimulator

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 01_feature_definition_and_latent_risk.ipynb  02_simple_dataset_with_exposure.ipynb  03_training_a_model.ipynb
src/claimssimulator/: __init__.py  metrics.py
src/claimssimulator/features/: __init__.py  feature_definition.py  feature_spec.py
src/claimssimulator/simulation/: __init__.py  claims_simulator.py
src/claimssimulator/visualization/: __init__.py  feature_visualization.py
tests/: __init__.py  test_claims_simulator.py  test_dependent_distributions.py  test_feature_definition.py  test_feature_transformations.py  test_feature_visualization.py  test_formula_feature.py  test_latent_risk_builder.py
